--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         </div>
     </div>
 
+    <!-- Load socket.io client first -->
     <script src="/socket.io/socket.io.js"></script>
+    <!-- Then load our game code -->
+    <script type="module" src="/src/menu.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 </html> 
